# haddock2anki

./: LICENSE  haddock2anki.cabal
app/: Main.hs
src/: Downloader.hs  Formatter.hs  Parser.hs  Scraper.hs  Types.hs
test/: ScraperTest.hs  Spec.hs  class.html  data.html  hasClass.html  operator.html  scalpel.html
