name:                haddock2anki
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/tsukimizake/haddock2anki#readme
license:             BSD3
license-file:        LICENSE
author:              Shojin Masuda
maintainer:          shomasd@gmail.com
copyright:           LGPL
category:            None
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Types, Parser, Formatter
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.6.0
                     , http-conduit >= 2.1.10.1
                     , scalpel >= 0.3
  default-language:    Haskell2010

executable haddock2anki-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haddock2anki
  default-language:    Haskell2010

test-suite haddock2anki-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haddock2anki
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsukimizake/haddock2anki
